# rust_linked_lists

./: Cargo.toml
src/: first.rs  fourth.rs  second.rs  third.rs
