[package]
name = "lists"
version = "0.1.0"
authors = ["amesingh <ameetpal.singh@oracle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`


[dependencies]
